# FastCausalSHAP

./: .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: docs.yml  python-publish.yml  test-python-versions.yml
api-reference/: index.html
docs/: api-reference.md  index.md
fast_causal_shap/: __init__.py  core.py
search/: search_index.json
tests/: test_core.py
