[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-causal-inference"
dynamic = ["version"]
description = "A Python package for efficient causal SHAP computations"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "woonyee28", email = "ngnwy289@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=1.0.0",
    "networkx>=2.0",
    "numpy>=1.18.0",
    "scikit-learn>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/woonyee28/CausalSHAP"
Repository = "https://github.com/woonyee28/CausalSHAP"
Issues = "https://github.com/woonyee28/CausalSHAP/issues"