[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-causal-shap"
version = "0.1.2"
description = "A Python package for efficient causal SHAP computations"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}  
authors = [
    {name = "woonyee28", email = "ngnwy289@gmail.com"},
]
dependencies = [
    "pandas>=1.0.0",
    "networkx>=2.0",
    "numpy>=1.18.0",
    "scikit-learn>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/woonyee28/CausalSHAP"
Issues = "https://github.com/woonyee28/CausalSHAP/issues"
