[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-causal-shap"
version = "0.3.0"
description = "A Python package for efficient causal SHAP computations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "woonyee28", email = "ngnwy289@gmail.com"},
]
dependencies = [
    "pandas>=1.0.0",
    "networkx>=2.0",
    "numpy>=1.18.0",
    "scikit-learn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "isort>=5.0",
    "pytest-cov>=2.0",
    "pre-commit>=2.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-autorefs>=0.5.0",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"

[tool.mypy]
files = "fast_causal_shap"
python_version = "3.9"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fast_causal_shap --cov-report=html --cov-report=term -v"

[project.urls]
Homepage = "https://github.com/woonyee28/CausalSHAP"
Issues = "https://github.com/woonyee28/CausalSHAP/issues"
